fixed flickering when change file in multi file snippet

--- a/browser/render/layouts/original/snippet-item-multi-files/snippet-item-multi-file.sass
+++ b/browser/render/layouts/original/snippet-item-multi-files/snippet-item-multi-file.sass
@@ -85,6 +85,7 @@
   .code
     max-height: 300px
     width: 80%
+    display: flex
   .file-list
     width: 20%
     max-height: 300px
